# NeMo-Retriever

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yaml
.github/workflows/: ci-pull-request.yml  huggingface-nightly.yml  integration-test-library-mode.yml
.greptile/: config.json  files.json  rules.md
ci/scripts/: check_uv_lock.sh
data/: bo767_annotations.csv
docs/: Makefile  mkdocs.yml
docs/docs/: index.md  license.md
docs/docs/extraction/: api-keys.md  audio-video.md  audio.md  benchmarking.md  concepts.md  content-metadata.md  data-store.md  embedding.md  environment-config.md  faq.md  helm.md  nemo-retriever-api-reference.md  nemoretriever-parse.md  nemotron-parse.md  nimclient.md  notebooks.md  (+17 more)
helm/: README.md  values.yaml
nemo_retriever/: README.md  pyproject.toml
nemo_retriever/.greptile/: config.json  files.json  rules.md
nemo_retriever/developer_docs/: README.md  graph_pipeline_registry.md
nemo_retriever/harness/: HANDOFF.md  test_configs.yaml
nemo_retriever/src/nemo_retriever/: graph_ingestor.py  inference_presets.py  ingest_plans.py  ingestor.py  retriever.py
nemo_retriever/src/nemo_retriever/api/: __init__.py
nemo_retriever/src/nemo_retriever/application/modes/: __init__.py  factory.py
nemo_retriever/src/nemo_retriever/audio/: __init__.py  asr_actor.py
nemo_retriever/src/nemo_retriever/caption/: __init__.py  caption.py
nemo_retriever/src/nemo_retriever/chart/: chart_detection.py  config.py  cpu_actor.py  gpu_actor.py  shared.py
nemo_retriever/src/nemo_retriever/examples/: graph_pipeline.py
nemo_retriever/src/nemo_retriever/graph/: README.md  __init__.py  content_transforms.py  executor.py  gpu_operator.py  graph_pipeline_registry.py  ingestor_runtime.py  multi_type_extract_operator.py  operator_archetype.py  operator_resolution.py  pipeline_graph.py  store_operator.py  tabular_fetch_embeddings_operator.py  tabular_schema_extract_operator.py
nemo_retriever/src/nemo_retriever/harness/: config.py  run.py  runner.py
nemo_retriever/src/nemo_retriever/html/: ray_data.py
nemo_retriever/src/nemo_retriever/image/: load.py  ray_data.py
nemo_retriever/src/nemo_retriever/infographic/: __init__.py  infographic_detection.py
nemo_retriever/src/nemo_retriever/ingest_modes/: batch.py  inprocess.py
nemo_retriever/src/nemo_retriever/io/: __init__.py  image_store.py  markdown.py
nemo_retriever/src/nemo_retriever/local/: __main__.py
nemo_retriever/src/nemo_retriever/model/local/: __init__.py  lighton_ocr2.py  llama_nemotron_embed_1b_v2_embedder.py  nemotron_parse_v1_2.py  nemotron_rerank_v2.py  nemotron_vlm_captioner.py
nemo_retriever/src/nemo_retriever/nim/: chat_completions.py  nim.py  probe.py
nemo_retriever/src/nemo_retriever/ocr/: __init__.py  cpu_ocr.py  cpu_parse.py  gpu_ocr.py  gpu_parse.py  ocr.py  shared.py
nemo_retriever/src/nemo_retriever/operators/: __init__.py  base.py  content.py  embedding.py
nemo_retriever/src/nemo_retriever/page_elements/: __init__.py  cpu_actor.py  gpu_actor.py  local.py  page_elements.py  shared.py
nemo_retriever/src/nemo_retriever/params/: __init__.py  models.py
nemo_retriever/src/nemo_retriever/parse/: nemotron_parse.py  nemotron_parse_postprocessing.py
nemo_retriever/src/nemo_retriever/pdf/: extract.py  split.py  stage.py
nemo_retriever/src/nemo_retriever/recall/: core.py
nemo_retriever/src/nemo_retriever/rerank/: __init__.py  rerank.py
nemo_retriever/src/nemo_retriever/table/: __init__.py  config.py  cpu_actor.py  gpu_actor.py  shared.py  table_detection.py
nemo_retriever/src/nemo_retriever/tabular_data/: sql_database.py
nemo_retriever/src/nemo_retriever/tabular_data/ingestion/: embeddings.py  extract_data.py  indexes.py  utils.py  write_to_graph.py
nemo_retriever/src/nemo_retriever/tabular_data/ingestion/dal/: db_dal.py  schemas_dal.py  utils_dal.py
nemo_retriever/src/nemo_retriever/tabular_data/ingestion/model/: neo4j_node.py  reserved_words.py  schema.py
nemo_retriever/src/nemo_retriever/tabular_data/ingestion/parsers/: schemas_parser.py
nemo_retriever/src/nemo_retriever/tabular_data/ingestion/services/: schema.py
nemo_retriever/src/nemo_retriever/tabular_data/neo4j/: SETUP.md  __init__.py  neo4j_connection.py
nemo_retriever/src/nemo_retriever/tabular_data/retrieval/: AGENTS.md  __init__.py  generate_sql.py
nemo_retriever/src/nemo_retriever/tabular_data/retrieval/skills/answer-formatting/: SKILL.md
nemo_retriever/src/nemo_retriever/tabular_data/retrieval/skills/query-writing/: SKILL.md
nemo_retriever/src/nemo_retriever/tabular_data/retrieval/skills/schema-exploration/: SKILL.md
nemo_retriever/src/nemo_retriever/text_embed/: __init__.py  cpu_operator.py  gpu_operator.py  main_text_embed.py  operators.py  shared.py  text_embed.py
nemo_retriever/src/nemo_retriever/txt/: ray_data.py  split.py
nemo_retriever/src/nemo_retriever/utils/: ray_resource_hueristics.py
nemo_retriever/src/nemo_retriever/utils/compare/: __main__.py
nemo_retriever/src/nemo_retriever/utils/convert/: to_pdf.py
nemo_retriever/src/nemo_retriever/utils/image/: __init__.py  __main__.py  render.py
nemo_retriever/src/nemo_retriever/utils/pipeline/: __init__.py  content.py  embedding.py
nemo_retriever/tabular-dev-tools/: SPIDER2_SETUP.md  duckdb_connector.py  setup_spider2.py  spider2_loader.py
nemo_retriever/tests/: test_actor_operators.py  test_asr_actor.py  test_audio_pipeline_batch.py  test_batch_pipeline.py  test_caption.py  test_chart_graphic_elements.py  test_cpu_module_import_safety.py  test_doc_to_pdf_actor.py  test_graph_pipeline_registry.py  test_harness_config.py  test_harness_run.py  test_inference_presets.py  test_ingest_interface.py  test_ingest_plans.py  test_io_image_store.py  test_multimodal_embed.py  test_nemotron_rerank_v2.py  test_operator_flags_and_cpu_actors.py  test_pdf_render_scale.py  test_pipeline_graph.py  test_recall_core.py  test_store_pipeline_stages.py  test_table_structure.py  test_tabular_pipeline.py
retrieval-bench/: pyproject.toml
src/.greptile/: config.json  files.json  rules.md
tools/harness/: README.md
(+14 files in other folders)
